Adding analytics and reporting to tests

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "precommit": "                           lint-staged",
     "prepush": "                             ./prepush $HUSKY_GIT_PARAMS <<< $HUSKY_GIT_STDIN",
     "enable:lfs": "                          node enable-lfs-hooks.js",
-    "test": "                                 yarn jest",
-    "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) yarn jest",
+    "test": "                                node ./build/jest-config/index.js",
+    "test:update": "                         node ./build/jest-config/index.js -u",
+    "test:watch": "                          node ./build/jest-config/index.js --watch",
+    "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) node ./build/jest-config/index.js",
     "test:browser": "                        projector ./projector testBrowser",
     "test:browser:watch": "                  projector ./projector testBrowser --watch",
     "test:browser:browserstack": "           projector ./projector testBrowserCI --browserstack",
