--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -111,7 +111,7 @@ pipelines:
               - source ./build-setup.sh
               - git lfs pull
               - bolt install --pure-lockfile
-              - TEST_ONLY_PATTERN='!packages/editor' yarn run test:vr:changed
+              - TEST_ONLY_PATTERN='!packages/editor' yarn run test:vr:changed --passWithNoTests
             caches:
               - node
         - step:
