--- a/packages/editor/editor-core/package.json
+++ b/packages/editor/editor-core/package.json
@@ -27,6 +27,7 @@
     "@atlaskit/adf-schema": "^1.4.6",
     "@atlaskit/adf-utils": "^5.6.0",
     "@atlaskit/analytics-gas-types": "^3.2.3",
+    "@atlaskit/analytics-listeners": "^4.1.5",
     "@atlaskit/analytics-namespaced-context": "^2.1.5",
     "@atlaskit/analytics-next": "^3.1.2",
     "@atlaskit/analytics-next-types": "^3.1.2",
