--- a/packages/navigation/centralised-app-switcher/package.json
+++ b/packages/navigation/centralised-app-switcher/package.json
@@ -16,6 +16,7 @@
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/icon": "^16.0.0",
     "@atlaskit/item": "^8.0.14",
+    "@atlaskit/logo": "^9.2.6",
     "@atlaskit/theme": "^7.0.1",
     "babel-runtime": "^6.26.0"
   },
