--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -115,10 +115,10 @@ pipelines:
               - TEST_ONLY_PATTERN='packages/editor' yarn run test:vr:changed --passWithNoTests
             after-script:
               # Extract all the diff images and store them into a folder for download
-              - mkdir ./diffImg && find . -name '*-diff.png' -not -path "./node_modules/*" -exec cp {} ./diffImg \;
+              - mkdir ./diffImg && find . -name '*-diff.png' -not -path "./node_modules/*" -exec cp {} ./imageSnapshotFailures \;
             # If a failure occurs, you can download the image snapshot of the differences.
             artifacts: 
-              - ./diffImg
+              - ./imageSnapshotFailures
             caches:
               - node
         - step:
