--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -118,7 +118,7 @@ pipelines:
               - mkdir ./diffImg && find . -name '*-diff.png' -not -path "./node_modules/*" -exec cp {} ./imageSnapshotFailures \;
             # If a failure occurs, you can download the image snapshot of the differences.
             artifacts: 
-              - ./imageSnapshotFailures
+              - imageSnapshotFailures
             caches:
               - node
         - step:
