--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "typecheck:flow": "                      flow check --max-warnings=0",
     "typecheck:typescript": "                tsc --noEmit --project ./tsconfig.typecheck.json",
     "measure": "                             measure",
-    "measure:changed": "                     yarn measure $(node build/ci-scripts/get.changed.packages.since.master.js --spaceDelimited) --lint",
-    "measure:updateSnapshot": "              yarn measure $(node build/ci-scripts/get.changed.packages.since.master.js --spaceDelimited) --updateSnapshot",
+    "measure:changed": "                     yarn measure $(node build/ci-scripts/get.changed.packages.since.master.js --spaceDelimited --only='packages') --lint",
+    "measure:updateSnapshot": "              yarn measure $(node build/ci-scripts/get.changed.packages.since.master.js --spaceDelimited --only='packages') --updateSnapshot",
     "website:start": "                       cd website && yarn start",
     "start": "                               yarn run website:start",
     "start:bitbucket": "                     yarn run website:start **/packages/bitbucket/**",
