--- a/packages/editor/json-schema-generator/package.json
+++ b/packages/editor/json-schema-generator/package.json
@@ -18,6 +18,9 @@
   ],
   "repository": "https://bitbucket.org/atlassian/atlaskit-mk-2",
   "dependencies": {
+    "@types/meow": "^5.0.0",
+    "@types/mkdirp": "^0.5.2",
+    "@types/prettier": "^1.15.2",
     "meow": "^5.0.0",
     "mkdirp": "^0.5.1",
     "prettier": "^1.14.3",
