--- a/package.json
+++ b/package.json
@@ -337,6 +337,7 @@
     "emotion": "^9.1.1",
     "emotion-theming": "^9.0.0",
     "enzyme-to-json": "^3.3.0",
+    "eqio": "^0.1.3",
     "es6-object-assign": "^1.1.0",
     "eventemitter2": "^4.1.0",
     "execa": "^0.10.0",
