--- a/packages/navigation/centralised-app-switcher/package.json
+++ b/packages/navigation/centralised-app-switcher/package.json
@@ -17,6 +17,7 @@
     "@atlaskit/icon": "^16.0.0",
     "@atlaskit/item": "^8.0.14",
     "@atlaskit/logo": "^9.2.6",
+    "@atlaskit/lozenge": "^6.2.4",
     "@atlaskit/theme": "^7.0.1",
     "babel-runtime": "^6.26.0"
   },
