--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -87,25 +87,23 @@ pipelines:
               - node
         - step:
             name: Browser Unit Testing
-            image: atlassianlabs/atlaskit-mk-2-vr:1.0.8
             script:
               - source ./build-setup.sh
               - bolt install --pure-lockfile
               - echo "Run browser unit tests using Karma + Browserstack"
-              - yarn test:browser
+              - yarn test:browser:browserstack
             caches:
               - node
-        # https://hello.atlassian.net/servicedesk/customer/portal/2/ADM-208362
-        # - step:
-        #     name: Browser Integration Testing
-        #     script:
-        #       - source ./build-setup.sh
-        #       - bolt install --pure-lockfile
-        #       - echo "Run browser integration tests using Webdriver + Browserstack"
-        #       # If we have changed any packages with webdriver tests, we wait until browserstack has free resources, then run our tests
-        #       - LOCAL_IDENTIFIER=$(date +%s) BS_RETRY=5 BS_BUILD_ALLOWED=3 node build/ci-scripts/run.tool.if.changed.js webdriver -- node build/ci-scripts/wait.for.browserstack.resources.js && yarn test:webdriver:browserstack:changed
-        #     caches:
-        #       - node
+        - step:
+            name: Browser Integration Testing
+            script:
+              - source ./build-setup.sh
+              - bolt install --pure-lockfile
+              - echo "Run browser integration tests using Webdriver + Browserstack"
+              # If we have changed any packages with webdriver tests, we wait until browserstack has free resources, then run our tests
+              - LOCAL_IDENTIFIER=$(date +%s) BS_RETRY=5 BS_BUILD_ALLOWED=3 node build/ci-scripts/run.tool.if.changed.js webdriver -- node build/ci-scripts/wait.for.browserstack.resources.js && yarn test:webdriver:browserstack:changed
+            caches:
+              - node
         - step:
             name: Visual Regression Tests
             image: atlassianlabs/atlaskit-mk-2-vr:1.0.8
@@ -198,11 +196,10 @@ pipelines:
     # This will run with the webdriver tests
     build-webdriver:
       - step:
-          image: atlassianlabs/atlaskit-mk-2-vr:1.0.8
           script:
             - source ./build-setup.sh
             - bolt install --pure-lockfile
-            - HEADLESS=true yarn test:webdriver select
+            - yarn test:webdriver:browserstack
           caches:
             - node
             
@@ -308,14 +305,13 @@ pipelines:
                 - bolt install --pure-lockfile
                 - export TMPFILE=$(mktemp /tmp/jest.XXXXXX) && yarn --silent jest --listTests --json > $TMPFILE
                 - STEPS="4" STEP_IDX="3" PARALLELIZE_TESTS_FILE="$TMPFILE" yarn jest --runInBand
-          # https://hello.atlassian.net/servicedesk/customer/portal/2/ADM-208362
-          # - step:
-          #     name: Running Browser Integration tests
-          #     script:
-          #       - source ./build-setup.sh
-          #       - git merge master --no-edit
-          #       - bolt install --pure-lockfile
-          #       - LANDKID=true yarn test:webdriver:browserstack:changed
+          - step:
+              name: Running Browser Integration tests
+              script:
+                - source ./build-setup.sh
+                - git merge master --no-edit
+                - bolt install --pure-lockfile
+                - LANDKID=true yarn test:webdriver:browserstack:changed
       - step:
           name: Wait until no master is running
           script:
