Fix types for editor/renderer
More types

add puppeteer dev dep

Fix api call

--- a/packages/editor/editor-wikimarkup-transformer/package.json
+++ b/packages/editor/editor-wikimarkup-transformer/package.json
@@ -36,6 +36,7 @@
     "@atlaskit/theme": "^7.0.1",
     "@atlaskit/util-data-test": "^10.2.1",
     "@types/prosemirror-model": "^1.5.0",
+    "@types/puppeteer": "^1.12.1",
     "cookie": "^0.3.1",
     "debug": "^2.2.0",
     "got": "^8.3.1",
