--- a/packages/media/media-picker/package.json
+++ b/packages/media/media-picker/package.json
@@ -34,7 +34,7 @@
     "@atlaskit/media-ui": "^8.2.6",
     "@atlaskit/modal-dialog": "^7.2.1",
     "@atlaskit/spinner": "^9.0.13",
-    "@atlaskit/util-shared-styles": "^2.10.3",
+    "@atlaskit/theme": "^7.0.4",
     "@types/bricks.js": "^1.8.0",
     "bricks.js": "^1.8.0",
     "dateformat": "^1.0.12",
