--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -91,7 +91,7 @@ pipelines:
               - source ./build-setup.sh
               - bolt install --pure-lockfile
               - echo "Run browser unit tests using Karma + Browserstack"
-              - yarn test:browser:browserstack
+              - node build/ci-scripts/run.tool.if.changed.js karma -- yarn test:browser:browserstack
             caches:
               - node
         - step:
