--- a/packages/navigation/centralised-app-switcher/package.json
+++ b/packages/navigation/centralised-app-switcher/package.json
@@ -19,7 +19,8 @@
     "@atlaskit/logo": "^9.2.6",
     "@atlaskit/lozenge": "^6.2.4",
     "@atlaskit/theme": "^7.0.1",
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "react-adopt": "^0.6.0"
   },
   "devDependencies": {
     "@atlaskit/docs": "^6.0.0",
