--- a/packages/core/droplist/package.json
+++ b/packages/core/droplist/package.json
@@ -42,6 +42,7 @@
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/field-base": "^11.0.14",
+    "@atlaskit/webdriver-runner": "^0.1.0",
     "enzyme": "^3.7.0",
     "react-dom": "^16.4.2"
   },
