--- a/packages/editor/editor-mobile-bridge/package.json
+++ b/packages/editor/editor-mobile-bridge/package.json
@@ -32,6 +32,7 @@
     "@atlaskit/renderer": "^40.0.0",
     "@atlaskit/status": "^0.3.6",
     "@atlaskit/task-decision": "^11.2.2",
+    "@atlaskit/theme": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@types/prosemirror-view": "^1.3.0",
     "enzyme": "^3.7.0",
