update snapshots to tar

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -113,11 +113,10 @@ pipelines:
               - bolt install --pure-lockfile
               - yarn run test:vr:changed
             after-script:
-              # Extract all the diff images and store them into a folder for download.
-              - mkdir ./imageSnapshotFailures && find . -name '*-diff.png' -not -path "./node_modules/*" -exec cp {} ./imageSnapshotFailures \;
-            # If a failure occurs, you can download the image snapshot of the differences.
+            # Extract all the diff images and store them into a folder for download
+              - find . -name '*-diff.png' -not -path "./node_modules/*" |  tar -cvjf ImageSnapshotFailures.tar --files-from -
             artifacts: 
-              - imageSnapshotFailures
+              - ImageSnapshotFailures.tar
             caches:
               - node
         - step:
