FS-3574 Fix i18n warning in user picker unit tests
Replace usage of enzyme's `shallow` and `mount` functions with i18n-friendly
`shallowWithIntl` and `mountWithIntl`.

--- a/packages/elements/user-picker/package.json
+++ b/packages/elements/user-picker/package.json
@@ -54,6 +54,7 @@
     "@types/memoize-one": "^3.0.1",
     "@types/uuid": "^3.4.4",
     "enzyme": "^3.7.0",
+    "enzyme-react-intl": "^2.0.3",
     "react-intl": "^2.6.0"
   },
   "repository": {
