--- a/packages/core/width-detector/package.json
+++ b/packages/core/width-detector/package.json
@@ -36,6 +36,7 @@
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/visual-regression": "^0.0.1",
     "enzyme": "^3.7.0",
+    "lodash.debounce": "^4.0.8",
     "react-dom": "^16.4.2"
   },
   "keywords": [
