--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -52,12 +52,12 @@
     "./typings/postis.d.ts",
     "./typings/prosemirror-markdown.d.ts",
     "./typings/p-wait-for.d.ts",
-    "./typings/raf-schd.d.ts",
     "./typings/rusha.d.ts",
     "./typings/scrollparent.d.ts",
     "./typings/snake-case.d.ts",
     "./typings/static-assets.d.ts",
     "./typings/url.d.ts",
+    "./typings/url-search-params.d.ts",
     "./typings/uuid.d.ts",
     "./typings/webpack.d.ts"
   ]
