--- a/package.json
+++ b/package.json
@@ -426,7 +426,7 @@
     "prosemirror-state": "^1.2.2",
     "prosemirror-tables": "^0.7.10",
     "prosemirror-transform": "^1.1.3",
-    "prosemirror-utils": "^0.7.5",
+    "prosemirror-utils": "0.7.6",
     "prosemirror-view": "^1.7.0",
     "pubnub": "^4.20.3",
     "puppeteer": "^1.10.0",
