--- a/packages/editor/editor-core/package.json
+++ b/packages/editor/editor-core/package.json
@@ -86,7 +86,7 @@
     "prosemirror-state": "^1.2.2",
     "prosemirror-tables": "^0.7.10",
     "prosemirror-transform": "^1.1.3",
-    "prosemirror-utils": "^0.7.5",
+    "prosemirror-utils": "0.7.6",
     "prosemirror-view": "^1.7.0",
     "raf-schd": "^2.1.0",
     "re-resizable": "^4.9.0",
