--- a/packages/navigation/atlassian-switcher/package.json
+++ b/packages/navigation/atlassian-switcher/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "centralised-app-switcher",
+  "name": "@atlaskit/atlassian-switcher",
   "private": true,
   "version": "1.0.1",
   "main": "dist/es5/index.js",
