--- a/packages/elements/share/tsconfig.json
+++ b/packages/elements/share/tsconfig.json
@@ -9,6 +9,7 @@
     "./examples/**/*.tsx"
   ],
   "compilerOptions": {
+    "noImplicitAny": true,
     "baseUrl": "./",
     "noImplicitAny": true,
     "paths": {
