--- a/packages/core/global-navigation/package.json
+++ b/packages/core/global-navigation/package.json
@@ -46,6 +46,7 @@
     "@atlaskit/logo": "^9.2.6",
     "@atlaskit/modal-dialog": "^7.2.1",
     "@atlaskit/section-message": "^1.0.16",
+    "@atlaskit/tag": "^6.1.4",
     "@atlaskit/toggle": "^5.0.15",
     "@atlaskit/visual-regression": "^0.0.1",
     "enzyme": "^3.7.0",
