--- a/packages/elements/mention/package.json
+++ b/packages/elements/mention/package.json
@@ -31,6 +31,7 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@atlaskit/build-utils": "^2.0.0",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/i18n-tools": "^0.4.0",
     "@atlaskit/util-common-test": "^2.4.2",
@@ -41,9 +42,11 @@
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-react-intl": "^2.0.3",
     "es6-promise": "^4.0.5",
+    "exenv": "^1.2.2",
     "fetch-mock": "^6.5.2",
     "query-string": "^4.3.2",
     "react": "^16.4.0",
+    "react-dom": "^16.4.2",
     "react-intl": "^2.6.0",
     "whatwg-fetch": "^2.0.3"
   },
