--- a/tsconfig.media.json
+++ b/tsconfig.media.json
@@ -54,6 +54,7 @@
       "./typings/scrollparent.d.ts",
       "./typings/url.d.ts",
       "./typings/postis.d.ts",
+      "./typings/raf-schd.d.ts",
       "./typings/blueimp-load-image.d.ts",
       "./typings/png-chunks-extract.d.ts",
       "./typings/static-assets.d.ts",
