--- a/packages/media/media-filmstrip/package.json
+++ b/packages/media/media-filmstrip/package.json
@@ -23,6 +23,7 @@
     "@atlaskit/icon": "^16.0.0",
     "@atlaskit/media-card": "^54.0.0",
     "@atlaskit/theme": "^7.0.4",
+    "@types/debounce": "^1.2.0",
     "debounce": "^1.0.0",
     "tslib": "^1.8.0"
   },
