--- a/package.json
+++ b/package.json
@@ -463,7 +463,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scrolllock": "^3.0.2",
-    "react-select": "~2.1.1",
+    "react-select": "^2.4.0",
     "react-syntax-highlighter": "^10.0.1",
     "react-transition-group": "^2.2.1",
     "react-video-renderer": "^2.4.2",
