FS-3498 - enable noImplicitAny for task-decision

--- a/packages/elements/task-decision/tsconfig.json
+++ b/packages/elements/task-decision/tsconfig.json
@@ -9,5 +9,8 @@
     "./docs/**/*.tsx",
     "./examples/**/*.ts",
     "./examples/**/*.tsx"
-  ]
+  ],
+  "compilerOptions": {
+    "noImplicitAny": true
+  }
 }
