--- a/packages/elements/share/tsconfig.json
+++ b/packages/elements/share/tsconfig.json
@@ -10,10 +10,11 @@
   ],
   "compilerOptions": {
     "baseUrl": "./",
+    "noImplicitAny": true,
     "paths": {
       "@atlaskit/analytics-next": [
         "node_modules/@atlaskit/analytics-next-types"
       ]
     }
-  }  
+  }
 }
