--- a/packages/core/avatar/package.json
+++ b/packages/core/avatar/package.json
@@ -38,6 +38,7 @@
     "@atlaskit/toggle": "^5.0.15",
     "@atlaskit/visual-regression": "^0.0.1",
     "enzyme": "^3.7.0",
+    "exenv": "^1.2.2",
     "react-dom": "^16.4.2"
   },
   "keywords": [
