--- a/packages/editor/editor-mobile-bridge/package.json
+++ b/packages/editor/editor-mobile-bridge/package.json
@@ -53,6 +53,8 @@
     "ajv": "^4.11.3",
     "babel-loader": "^8.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "lodash.constant": "^3.0.0",
+    "lodash.times": "^4.3.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.2",
     "rxjs": "^5.5.0",
