FS-3498 - Enable noImplicitAny for elements analytics packages

--- a/packages/elements/analytics-listeners/tsconfig.json
+++ b/packages/elements/analytics-listeners/tsconfig.json
@@ -10,6 +10,7 @@
   ],
   "compilerOptions": {
     "baseUrl": "./",
+    "noImplicitAny": true,
     "paths": {
       "@atlaskit/analytics-next": [
         "node_modules/@atlaskit/analytics-next-types"
