--- a/tsconfig.media.json
+++ b/tsconfig.media.json
@@ -51,6 +51,7 @@
       "./typings/lodash.debounce.d.ts",
       "./typings/lodash.matches.d.ts",
       "./typings/lodash.merge.d.ts",
+      "./typings/lodash.sample.d.ts",
       "./typings/deepcopy.d.ts",
       "./typings/scrollparent.d.ts",
       "./typings/url.d.ts",
