--- a/packages/navigation/atlassian-switcher/tsconfig.json
+++ b/packages/navigation/atlassian-switcher/tsconfig.json
@@ -7,5 +7,13 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@atlaskit/analytics-next": [
+        "node_modules/@atlaskit/analytics-next-types"
+      ]
+    }
+  }
 }
