--- a/packages/elements/emoji/tsconfig.json
+++ b/packages/elements/emoji/tsconfig.json
@@ -1,8 +1,5 @@
 {
-  "extends": "../../../tsconfig.base.json",
-  "compilerOptions": {
-    "noImplicitAny": true
-  },
+  "extends": "../../../tsconfig.core.json",
   "include": [
     "./src/**/*.ts",
     "./src/**/*.tsx",
