--- a/packages/elements/task-decision/tsconfig.json
+++ b/packages/elements/task-decision/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../../tsconfig.core.json",
   "include": [
     "./src/**/*.ts",
     "./src/**/*.tsx",
@@ -9,8 +9,5 @@
     "./docs/**/*.tsx",
     "./examples/**/*.ts",
     "./examples/**/*.tsx"
-  ],
-  "compilerOptions": {
-    "noImplicitAny": true
-  }
+  ]
 }
