--- a/packages/elements/analytics-gas-types/tsconfig.json
+++ b/packages/elements/analytics-gas-types/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../../tsconfig.core.json",
   "include": [
     "./src/**/*.ts",
     "./src/**/*.tsx",
@@ -7,8 +7,5 @@
 
     "./docs/**/*.ts",
     "./docs/**/*.tsx",
-  ],
-  "compilerOptions": {
-    "noImplicitAny": true
-  }
+  ]
 }
