--- a/packages/elements/mention/tsconfig.json
+++ b/packages/elements/mention/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../../tsconfig.core.json",
   "include": [
     "./src/**/*.ts",
     "./src/**/*.tsx",
@@ -12,7 +12,6 @@
   ],
   "compilerOptions": {
     "baseUrl": "./",
-    "noImplicitAny": true,
     "paths": {
       "@atlaskit/analytics-next": [
         "node_modules/@atlaskit/analytics-next-types"
