--- a/packages/editor/editor-mobile-bridge/package.json
+++ b/packages/editor/editor-mobile-bridge/package.json
@@ -34,6 +34,7 @@
     "@atlaskit/task-decision": "^11.1.8",
     "@babel/polyfill": "^7.0.0",
     "@types/prosemirror-view": "^1.3.0",
+    "enzyme": "^3.7.0",
     "prosemirror-state": "^1.2.2",
     "prosemirror-view": "^1.7.0"
   },
