--- a/packages/media/media-core/package.json
+++ b/packages/media/media-core/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@atlaskit/media-store": "^9.1.6",
     "dataloader": "^1.4.0",
+    "deep-equal": "^1.0.1",
     "lru-fast": "^0.2.2",
     "tslib": "^1.8.0",
     "uuid": "^3.1.0",
