--- a/tsconfig.elements.json
+++ b/tsconfig.elements.json
@@ -4,6 +4,7 @@
     "./typings/atlaskit.d.ts",
     "./typings/deep-equal.d.ts",
     "./typings/deepcopy.d.ts",
+    "./typings/enzyme-react-intl.d.ts",
     "./typings/events.d.ts",
     "./typings/fetch-mock.d.ts",
     "./typings/jest-in-case.d.ts",
