update maintainers of package to Advokats

--- a/packages/core/badge/package.json
+++ b/packages/core/badge/package.json
@@ -13,8 +13,7 @@
   ],
   "author": "Atlassian Pty Ltd",
   "maintainers": [
-    "Raja B",
-    "Ben C",
+    "Sean C",
     "Ajay M"
   ],
   "atlaskit": {
