--- a/packages/core/nps/package.json
+++ b/packages/core/nps/package.json
@@ -13,9 +13,8 @@
     "dist"
   ],
   "maintainers": [
-    "Trey S",
-    "Alex R",
-    "Peter G",
+    "Sean C",
+    "Ajay M",
     "Weston S"
   ],
   "keywords": [
