--- a/packages/core/textarea/package.json
+++ b/packages/core/textarea/package.json
@@ -15,8 +15,7 @@
   "author": "Atlassian Pty Ltd",
   "maintainers": [
     "Sean C",
-    "Charles L",
-    "Vito BZ"
+    "Ajay M"
   ],
   "repository": "https://bitbucket.org/atlassian/atlaskit-mk-2",
   "dependencies": {
