--- a/packages/core/analytics-next/package.json
+++ b/packages/core/analytics-next/package.json
@@ -12,9 +12,8 @@
   ],
   "author": "Atlassian Pty Ltd",
   "maintainers": [
-    "Trey S",
-    "Alex R",
-    "Peter G"
+    "Sean C",
+    "Ajay M"
   ],
   "atlaskit": {
     "name": "Analytics next",
