--- a/packages/core/analytics/package.json
+++ b/packages/core/analytics/package.json
@@ -14,9 +14,8 @@
   ],
   "author": "Atlassian Pty Ltd",
   "maintainers": [
-    "Trey S",
-    "Alex R",
-    "Peter G"
+    "Sean C",
+    "Ajay M"
   ],
   "atlaskit": {
     "name": "Analytics",
