--- a/packages/core/calendar/package.json
+++ b/packages/core/calendar/package.json
@@ -13,8 +13,7 @@
   "author": "Atlassian Pty Ltd",
   "maintainers": [
     "Sean C",
-    "Charles L",
-    "Mike G"
+    "Ajay M"
   ],
   "atlaskit": {
     "name": "Calendar",
