--- a/packages/core/code/package.json
+++ b/packages/core/code/package.json
@@ -32,8 +32,7 @@
   },
   "author": "Atlassian Pty. Ltd",
   "maintainers": [
-    "Raja B",
-    "Ben C",
+    "Sean C",
     "Ajay M",
     "Oscar W"
   ],
