--- a/packages/core/datetime-picker/package.json
+++ b/packages/core/datetime-picker/package.json
@@ -14,8 +14,7 @@
   "author": "Atlassian Pty Ltd",
   "maintainers": [
     "Sean C",
-    "Charles L",
-    "Mike G"
+    "Ajay M"
   ],
   "atlaskit": {
     "name": "Date-time picker",
