--- a/packages/core/icon-priority/package.json
+++ b/packages/core/icon-priority/package.json
@@ -14,8 +14,7 @@
   ],
   "author": "Atlassian Pty Ltd",
   "maintainers": [
-    "Raja B",
-    "Ben C",
+    "Sean C",
     "Ajay M"
   ],
   "repository": "https://bitbucket.org/atlassian/atlaskit-mk-2",
