--- a/packages/core/range/package.json
+++ b/packages/core/range/package.json
@@ -13,7 +13,7 @@
   "author": "Atlassian Pty Ltd",
   "maintainers": [
     "Sean C",
-    "Charles L"
+    "Ajay M"
   ],
   "repository": "https://bitbucket.org/atlassian/atlaskit-mk-2",
   "dependencies": {
