--- a/packages/core/spinner/package.json
+++ b/packages/core/spinner/package.json
@@ -14,8 +14,7 @@
   ],
   "author": "Atlassian Pty Ltd",
   "maintainers": [
-    "Raja B",
-    "Ben C",
+    "Sean C",
     "Ajay M"
   ],
   "atlaskit": {
