added Kang and Daniel to package maintainers

--- a/packages/core/nps/package.json
+++ b/packages/core/nps/package.json
@@ -15,7 +15,9 @@
   "maintainers": [
     "Sean C",
     "Ajay M",
-    "Weston S"
+    "Weston S",
+    "Daniel D",
+    "Kang C"
   ],
   "keywords": [
     "atlaskit",
