--- a/packages/core/analytics/package.json
+++ b/packages/core/analytics/package.json
@@ -15,7 +15,9 @@
   "author": "Atlassian Pty Ltd",
   "maintainers": [
     "Sean C",
-    "Ajay M"
+    "Ajay M",
+    "Daniel D",
+    "Kang C"
   ],
   "atlaskit": {
     "name": "Analytics",
