--- a/packages/core/calendar/package.json
+++ b/packages/core/calendar/package.json
@@ -13,7 +13,9 @@
   "author": "Atlassian Pty Ltd",
   "maintainers": [
     "Sean C",
-    "Ajay M"
+    "Ajay M",
+    "Daniel D",
+    "Kang C"
   ],
   "atlaskit": {
     "name": "Calendar",
