--- a/packages/core/code/package.json
+++ b/packages/core/code/package.json
@@ -34,7 +34,9 @@
   "maintainers": [
     "Sean C",
     "Ajay M",
-    "Oscar W"
+    "Oscar W",
+    "Daniel D",
+    "Kang C"
   ],
   "atlaskit": {
     "name": "Code"
