--- a/packages/core/tag/package.json
+++ b/packages/core/tag/package.json
@@ -14,7 +14,9 @@
   "author": "Atlassian Pty Ltd",
   "maintainers": [
     "Sean C",
-    "Ajay M"
+    "Ajay M",
+    "Daniel D",
+    "Kang C"
   ],
   "atlaskit": {
     "name": "Tag",
