--- a/packages/editor/editor-jira-transformer/package.json
+++ b/packages/editor/editor-jira-transformer/package.json
@@ -33,7 +33,6 @@
     "@atlaskit/editor-test-helpers": "^7.0.0",
     "@atlaskit/theme": "^7.0.1",
     "@atlaskit/util-data-test": "^10.2.1",
-    "@types/prosemirror-model": "^1.5.0",
-    "chai-as-promised": "^6.0.0"
+    "@types/prosemirror-model": "^1.5.0"
   }
 }
