--- a/packages/editor/editor-json-transformer/package.json
+++ b/packages/editor/editor-json-transformer/package.json
@@ -30,7 +30,6 @@
     "@atlaskit/editor-core": "^100.0.0",
     "@atlaskit/editor-test-helpers": "^7.0.0",
     "@atlaskit/util-data-test": "^10.2.1",
-    "@types/prosemirror-model": "^1.5.0",
-    "chai-as-promised": "^6.0.0"
+    "@types/prosemirror-model": "^1.5.0"
   }
 }
