add Ajay and Harsha as maintainers of nav-next and global navigation

--- a/packages/core/global-navigation/package.json
+++ b/packages/core/global-navigation/package.json
@@ -8,6 +8,10 @@
   "license": "Apache-2.0",
   "atlaskit:src": "src/index.js",
   "sideEffects": false,
+  "maintainers": [
+    "Harsha Ivaturi",
+    "Ajay M"
+  ],
   "files": [
     "dist"
   ],
