ED-6290: Adding sentry to Editor examples

--- a/package.json
+++ b/package.json
@@ -262,6 +262,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@sentry/browser": "^4.6.3",
     "@types/bricks.js": "^1.8.0",
     "@types/bytes": "^2.4.33",
     "@types/chalk": "^2.2.0",
