--- a/packages/people-and-teams/focused-task-close-account/package.json
+++ b/packages/people-and-teams/focused-task-close-account/package.json
@@ -3,7 +3,7 @@
   "version": "0.8.1",
   "description": "This package contains all of the UI components needed to assemble the focused tasks for deactivating and deleting users' accounts in accordance with the GDPR \"Right to be forgotten\".",
   "atlaskit:src": "src/index.ts",
-  "jsnext:main": "dist/es2015/index.js",
+  "jsnext:main": "index.js",
   "module": "index.js",
   "types": "index.d.ts",
   "scripts": {
