--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "changeset": "                           node ./build/releases/bin/build-releases.js changeset",
     "build:adf-schema:json-schema": "        cd packages/editor/adf-schema && yarn run build:json-schema && echo 'Done.'",
     "build:editor-mobile-bridge": "          cd packages/editor/editor-mobile-bridge && yarn build:minimize",
-    "build:media-editor:copy-binaries": "    cd packages/media/media-editor && cp -r src/engine/core/binaries dist/es2015/engine/core",
+    "build:media-editor:copy-binaries": "    cd packages/media/media-editor && cp -r src/engine/core/binaries engine/core",
     "build:navigation-next": "               cd packages/core/navigation-next && yarn build",
     "build:bundle-analysis": "               node ./build/ci-scripts/run.bundle.analysis",
     "build:css-reset": "                     BABEL_ENV=production:cjs bolt w @atlaskit/css-reset run build",
