--- a/packages/elements/share/package.json
+++ b/packages/elements/share/package.json
@@ -5,7 +5,7 @@
     "access": "private"
   },
   "description": "Fabric Share Element",
-  "modules": "dist/es2015/index.js",
+  "modules": "index.js",
   "types": "dist/es5/types.d.ts",
   "atlaskit:src": "src/index.ts",
   "files": [
