--- a/packages/jira/color-picker/package.json
+++ b/packages/jira/color-picker/package.json
@@ -2,7 +2,7 @@
   "name": "@atlaskit/color-picker",
   "version": "0.2.5",
   "description": "Jira Color Picker Component",
-  "modules": "dist/es2015/index.js",
+  "modules": "index.js",
   "types": "dist/es5/types.d.ts",
   "atlaskit:src": "src/index.ts",
   "atlaskit": {
