--- a/packages/search/global-search/package.json
+++ b/packages/search/global-search/package.json
@@ -3,7 +3,7 @@
   "version": "5.15.4",
   "description": "A cross-product search component (batteries included)",
   "license": "Apache-2.0",
-  "jsnext:main": "dist/es2015/index.js",
+  "jsnext:main": "index.js",
   "module": "index.js",
   "types": "index.d.ts",
   "atlaskit:src": "src/index.ts",
