--- a/packages/search/quick-search/package.json
+++ b/packages/search/quick-search/package.json
@@ -3,7 +3,7 @@
   "version": "5.3.0",
   "description": "A quick-search component",
   "license": "Apache-2.0",
-  "jsnext:main": "dist/es2015/index.js",
+  "jsnext:main": "index.js",
   "module": "index.js",
   "types": "index.d.ts",
   "atlaskit:src": "src/index.ts",
