--- a/packages/teamwork-ecosystem/outbound-auth-flow-client/package.json
+++ b/packages/teamwork-ecosystem/outbound-auth-flow-client/package.json
@@ -6,7 +6,7 @@
     "access": "public"
   },
   "atlaskit:src": "src/index.ts",
-  "jsnext:main": "dist/es2015/index.js",
+  "jsnext:main": "index.js",
   "module": "index.js",
   "types": "index.d.ts",
   "files": [
