adds ssr dev dep to all core packages

--- a/packages/core/breadcrumbs/package.json
+++ b/packages/core/breadcrumbs/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/logo": "^9.2.7",
     "@atlaskit/select": "^7.0.0",
