--- a/packages/core/comment/package.json
+++ b/packages/core/comment/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@atlaskit/avatar": "^14.1.8",
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/editor-core": "^102.0.0",
     "@atlaskit/visual-regression": "^0.0.1",
