--- a/packages/core/datetime-picker/package.json
+++ b/packages/core/datetime-picker/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/field-range": "^5.0.14",
