--- a/packages/core/textfield/package.json
+++ b/packages/core/textfield/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/form": "^5.1.7",
