--- a/packages/core/analytics-next/package.json
+++ b/packages/core/analytics-next/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/field-text": "^7.0.18",
