--- a/packages/core/avatar-group/package.json
+++ b/packages/core/avatar-group/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/code": "^8.2.2",
     "@atlaskit/docs": "^6.0.1",
