--- a/packages/core/calendar/package.json
+++ b/packages/core/calendar/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.1",
     "date-fns": "^1.30.1",
     "enzyme": "^3.7.0",
