--- a/packages/core/dynamic-table/package.json
+++ b/packages/core/dynamic-table/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@atlaskit/avatar": "^14.1.7",
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/dropdown-menu": "^6.1.25",
