--- a/packages/core/field-base/package.json
+++ b/packages/core/field-base/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/input": "^4.0.8",
     "enzyme": "^3.7.0",
