--- a/packages/core/field-range/package.json
+++ b/packages/core/field-range/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/section-message": "1.2.0",
     "enzyme": "^3.7.0",
