--- a/packages/core/flag/package.json
+++ b/packages/core/flag/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/field-radio-group": "^4.0.15",
     "@atlaskit/spinner": "^9.0.13",
