--- a/packages/core/form/package.json
+++ b/packages/core/form/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/calendar": "^7.0.17",
     "@atlaskit/checkbox": "^5.0.11",
