--- a/packages/core/inline-dialog/package.json
+++ b/packages/core/inline-dialog/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/datetime-picker": "^6.5.1",
     "@atlaskit/docs": "^6.0.1",
