--- a/packages/core/inline-edit/package.json
+++ b/packages/core/inline-edit/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/field-radio-group": "^4.0.15",
     "@atlaskit/field-text": "^7.0.18",
