--- a/packages/core/input/package.json
+++ b/packages/core/input/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/field-base": "^11.0.12",
     "enzyme": "^3.7.0",
     "react-dom": "^16.4.2"
