--- a/packages/core/layer-manager/package.json
+++ b/packages/core/layer-manager/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@atlaskit/analytics-next": "^3.1.2",
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/icon": "^16.0.0",
