--- a/packages/core/logo/package.json
+++ b/packages/core/logo/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/code": "^8.2.2",
     "@atlaskit/docs": "^6.0.0",
