--- a/packages/core/modal-dialog/package.json
+++ b/packages/core/modal-dialog/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@atlaskit/avatar": "^14.1.8",
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/checkbox": "^5.0.11",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/field-radio-group": "^4.0.15",
