--- a/packages/core/navigation-next/package.json
+++ b/packages/core/navigation-next/package.json
@@ -48,6 +48,7 @@
     "@atlaskit/analytics-listeners": "^4.1.4",
     "@atlaskit/badge": "^9.2.2",
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/drawer": "^2.7.1",
