--- a/packages/core/nps/package.json
+++ b/packages/core/nps/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.1",
     "enzyme": "^3.7.0",
     "react-dom": "^16.4.2"
