--- a/packages/core/page/package.json
+++ b/packages/core/page/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@atlaskit/banner": "^7.0.12",
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/logo": "^9.2.6",
