--- a/packages/core/radio/package.json
+++ b/packages/core/radio/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/checkbox": "^5.0.14",
     "@atlaskit/docs": "^6.0.1",
