--- a/packages/core/select/package.json
+++ b/packages/core/select/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/checkbox": "^5.0.11",
     "@atlaskit/docs": "^6.0.1",
