--- a/packages/core/table-tree/package.json
+++ b/packages/core/table-tree/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/empty-state": "^3.1.4",
     "@atlaskit/section-message": "^1.0.16",
