--- a/packages/core/tabs/package.json
+++ b/packages/core/tabs/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/spinner": "^9.0.13",
     "@atlaskit/tooltip": "^12.1.13",
