--- a/packages/core/tag-group/package.json
+++ b/packages/core/tag-group/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@atlaskit/avatar": "^14.1.7",
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/tag": "^6.1.3",
     "@atlaskit/visual-regression": "^0.0.1",
