--- a/packages/core/textarea/package.json
+++ b/packages/core/textarea/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.1",
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/visual-regression": "^0.0.1",
