--- a/packages/core/progress-tracker/package.json
+++ b/packages/core/progress-tracker/package.json
@@ -3,6 +3,7 @@
   "version": "4.0.10",
   "description": "A React component that shows the steps and progress in a journey",
   "license": "Apache-2.0",
+  "module": "index.js",
   "atlaskit:src": "src/index.js",
   "atlaskit:designLink": "https://atlassian.design/guidelines/product/components/progress-tracker",
   "sideEffects": false,
