--- a/packages/core/polyfills/package.json
+++ b/packages/core/polyfills/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.4",
   "description": "A package containing polyfills for native methods.",
   "license": "Apache-2.0",
-  "main": "index.js",
+  "module": "index.js",
   "sideEffects": false,
   "files": [
     "*.js"
