try again without "resolveJsonModule": true

--- a/packages/editor/renderer/tsconfig.json
+++ b/packages/editor/renderer/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "noImplicitAny": true,
-    "resolveJsonModule": true
+    "noImplicitAny": true
   },
   "include": [
     "./src/**/*.ts",
