Rename test run file and clean up package json

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "delete:build": "                        bolt ws exec --parallel -- rm -rf dist",
     "enable:lfs": "                          node enable-lfs-hooks.js",
     "test": "                                yarn jest",
-    "test:CI": "                             node ./build/jest-config/index.js",
-    "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) node ./build/jest-config/run.jest.with.analytics-reporting.js",
+    "test:CI": "                             node ./build/jest-config/run.jest.with.analytics.reports.js",
+    "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) node ./build/jest-config/run.jest.with.analytics.reports.js",
     "test:browser": "                        projector ./projector testBrowser",
     "test:browser:watch": "                  projector ./projector testBrowser --watch",
     "test:browser:browserstack": "           projector ./projector testBrowserCI --browserstack",
